# apps/auth-service/src/routes/auth.routes.ts
@@ -1,8 +1,9 @@
 import express from "express";
-import { userRegistration } from "../controller/auth.controller";
+import { userRegistration, verifyUserOtp } from "../controller/auth.controller";
 
 const router = express.Router();
 
 router.post("/register", userRegistration);
+router.post("/verify-otp", verifyUserOtp);
 
 export default router;
