# apps/auth-service/src/swagger-output.json
@@ -6,18 +6,18 @@
     "version": "1.0.0"
   },
   "host": "localhost:6001",
-  "basePath": "/",
-  "tags": [
-    {
-      "name": "Auth",
-      "description": "Authentication and Authorization"
-    }
+  "basePath": "/api",
+  "schemes": [
+    "http"
   ],
-  "schemes": ["http"],
-  "consumes": ["application/json"],
-  "produces": ["application/json"],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
-    "/api/register": {
+    "/register": {
       "post": {
         "description": "",
         "parameters": [
@@ -28,24 +28,10 @@
               "type": "object",
               "properties": {
                 "name": {
-                  "type": "string",
-                  "example": "John Doe"
+                  "example": "any"
                 },
                 "email": {
-                  "type": "string",
-                  "example": "mahedianwar@gmail.com"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "SecurePassword123"
-                },
-                "phone_number": {
-                  "type": "string",
-                  "example": "+1-234-567-890"
-                },
-                "country": {
-                  "type": "string",
-                  "example": "United States"
+                  "example": "any"
                 }
               }
             }
@@ -54,9 +40,39 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/verify-otp": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "otp": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
@@ -66,21 +82,53 @@
     "User": {
       "type": "object",
       "properties": {
-        "id": {
-          "type": "number",
-          "example": 1
-        },
-        "name": {
+        "type": {
           "type": "string",
-          "example": "johndoe"
+          "example": "object"
         },
-        "email": {
-          "type": "string",
-          "example": "6Mn4o@example.com"
-        },
-        "password": {
-          "type": "string",
-          "example": "password123"
+        "properties": {
+          "type": "object",
+          "properties": {
+            "name": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "example": {
+                  "type": "string",
+                  "example": "John Doe"
+                }
+              }
+            },
+            "email": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "example": {
+                  "type": "string",
+                  "example": "johndoe@example.com"
+                }
+              }
+            },
+            "password": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "example": {
+                  "type": "string",
+                  "example": "password123"
+                }
+              }
+            }
+          }
         }
       }
     }
